Pokemon endpoint for valid pokemon
- Added the logic to fetch the pokemon data
- This does not currently handle invalid pokemon passed to the API

--- a/PokedexAPI/PokedexAPI/PokedexAPI.csproj
+++ b/PokedexAPI/PokedexAPI/PokedexAPI.csproj
@@ -10,11 +10,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
 	<ItemGroup>
-		<InternalsVisibleTo Include ="Tests.Integration"/>
+		<InternalsVisibleTo Include="Tests.Integration" />
 	</ItemGroup>
 
 </Project>
