--- a/PokedexAPI/PokedexAPI/Dockerfile
+++ b/PokedexAPI/PokedexAPI/Dockerfile
@@ -7,14 +7,14 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["PokedexAPI/PokedexAPI.csproj", "PokedexAPI/"]
-RUN dotnet restore "PokedexAPI/PokedexAPI.csproj"
+COPY ["PokedexAPI.csproj", "./"]
+RUN dotnet restore "./PokedexAPI.csproj"
 COPY . .
-WORKDIR "/src/PokedexAPI"
+WORKDIR "/src/"
 RUN dotnet build "PokedexAPI.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "PokedexAPI.csproj" -c Release -o /app/publish
+RUN dotnet publish "PokedexAPI.csproj" -c Release -o /app/publish -r linux-x64
 
 FROM base AS final
 WORKDIR /app
